--- a/HomeManager/View/ToDo/ucCategorieën.xaml
+++ b/HomeManager/View/ToDo/ucCategorieën.xaml
@@ -76,8 +76,7 @@
                     Grid.Column="1"
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedIndex="{Binding MijnSelectedItem.MijnSelectedIndex, Mode=TwoWay}"
-                    SelectedItem="{Binding MijnSelectedItem, UpdateSourceTrigger=PropertyChanged}"               
-                />
+                    SelectedItem="{Binding MijnSelectedItem, UpdateSourceTrigger=PropertyChanged}" />
 
 
                 <Label
@@ -93,8 +92,7 @@
                     Grid.Column="3"
                     Height="20"
                     VerticalAlignment="Center"
-                    Text="{Binding MijnSelectedItem.ToDoCategorie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"                    
-                />
+                    Text="{Binding MijnSelectedItem.ToDoCategorie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
             </Grid>
         </Border>
     </Grid>
