--- a/HomeManager/View/Budget/ucTransactie.xaml
+++ b/HomeManager/View/Budget/ucTransactie.xaml
@@ -1,15 +1,19 @@
 ﻿<UserControl
-    x:Class="HomeManager.View.ucDomiciliering"
+    x:Class="HomeManager.View.ucTransactie"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Behaviors="clr-namespace:HomeManager.Behaviors"
     xmlns:Converters="clr-namespace:HomeManager.Converter"
     xmlns:Helpers="clr-namespace:HomeManager.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    xmlns:viewmodel="clr-namespace:HomeManager.ViewModel"
+    d:DataContext="{d:DesignInstance Type=viewmodel:clsBijlageViewModel}"
+    d:DesignHeight="733.518"
+    d:DesignWidth="1268.648"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
 
@@ -20,7 +24,9 @@
 
 
 
-    <Grid DataContext="{Binding Source={StaticResource VML}, Path=DomicilieringViewModel}">
+
+
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=TransactieViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="*" />
@@ -49,7 +55,7 @@
                         VerticalAlignment="Center"
                         FontSize="20"
                         Foreground="White"
-                        Text="Domicilieringen" />
+                        Text="Transactie" />
 
                 </StackPanel>
                 <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" />
@@ -71,6 +77,8 @@
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
@@ -83,7 +91,8 @@
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="150" />
+                    <RowDefinition Height="150" />
                     <RowDefinition Height="*" />
 
                 </Grid.RowDefinitions>
@@ -117,7 +126,7 @@
                 </StackPanel>
 
                 <ListBox
-                    Name="Domiciliering"
+                    Name="Transactie"
                     Grid.Row="2"
                     Grid.RowSpan="11"
                     Grid.Column="1"
@@ -150,27 +159,22 @@
                                     </Style>
                                 </Border.Style>
                                 <StackPanel Orientation="Vertical">
-                                    <StackPanel Margin="3" Orientation="Horizontal">
-                                        <TextBlock Margin="1" Text="{Binding Begunstigde}" />
-                                        <TextBlock Margin="1" Text=" - " />
+                                    <StackPanel Margin="2" Orientation="Horizontal">
                                         <TextBlock Margin="1" Text="{Binding BudgetCategorie}" />
+                                        <TextBlock Margin="1" Text=" - " />
+                                        <TextBlock Margin="1" Text="{Binding Begunstigde}" />
                                         <TextBlock Margin="1" Text=" - " />
                                         <TextBlock Margin="1" Text="{Binding Bedrag}" />
                                     </StackPanel>
-                                    <StackPanel Margin="1" Orientation="Horizontal">
+                                    <StackPanel Margin="2" Orientation="Horizontal">
                                         <TextBlock Margin="1" Text="Van: " />
-                                        <TextBlock Margin="1" Text="{Binding VanDatum, Converter={StaticResource DateFormatConverter}}" />
-                                        <TextBlock Margin="1" Text=" tot: " />
-                                        <TextBlock Margin="1" Text="{Binding TotDatum, Converter={StaticResource DateFormatConverter}}" />
+                                        <TextBlock Margin="1" Text="{Binding Datum, Converter={StaticResource DateFormatConverter}}" />
+
                                     </StackPanel>
                                 </StackPanel>
                             </Border>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
-
-
-
-
                 </ListBox>
 
 
@@ -206,33 +210,17 @@
                     Grid.Row="3"
                     Grid.Column="3"
                     HorizontalContentAlignment="Right"
-                    Content="Van Datum"
+                    Content="Datum"
                     Foreground="#024f87" />
 
                 <DatePicker
-                    x:Name="dpVanDatum"
+                    x:Name="dpDatum"
                     Grid.Row="3"
                     Grid.Column="4"
                     Width="200"
                     Margin="5"
                     Foreground="#024f87"
-                    SelectedDate="{Binding MijnSelectedItem.VanDatum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, ValidatesOnExceptions=True, Converter={StaticResource DateOnlyToDateTimeConverter}}"
-                    SelectedDateFormat="Short" />
-                <Label
-                    Grid.Row="4"
-                    Grid.Column="3"
-                    HorizontalContentAlignment="Right"
-                    Content="Tot Datum"
-                    Foreground="#024f87" />
-
-                <DatePicker
-                    x:Name="dpTotDatum"
-                    Grid.Row="4"
-                    Grid.Column="4"
-                    Width="200"
-                    Margin="5"
-                    Foreground="#024f87"
-                    SelectedDate="{Binding MijnSelectedItem.TotDatum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, ValidatesOnExceptions=True, Converter={StaticResource DateOnlyToDateTimeConverter}}"
+                    SelectedDate="{Binding MijnSelectedItem.Datum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, ValidatesOnExceptions=True, Converter={StaticResource DateOnlyToDateTimeConverter}}"
                     SelectedDateFormat="Short" />
 
                 <Label
@@ -251,37 +239,9 @@
                     Background="White"
                     Foreground="#024f87"
                     Text="{Binding MijnSelectedItem.Onderwerp, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                    TextWrapping="Wrap"/>
+                    TextWrapping="Wrap" />
 
 
-                <Label
-                    Grid.Row="6"
-                    Grid.Column="3"
-                    Margin="5"
-                    HorizontalContentAlignment="Right"
-                    Content="Frequentie"
-                    Foreground="#024f87" />
-                <StackPanel
-                    Grid.Row="6"
-                    Grid.Column="4"
-                    HorizontalAlignment="Left"
-                    Orientation="Horizontal">
-
-                    <ComboBox
-                        x:Name="cboFrequentie"
-                        Width="170"
-                        Margin="5"
-                        DataContext="{Binding Source={StaticResource VML}, Path=FrequentieViewModel}"
-                        Foreground="#024f87"
-                        ItemsSource="{Binding MijnCollectie}"
-                        SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.FrequentieID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                        SelectedValuePath="FrequentieID" />
-                    <Button
-                        Width="30"
-                        Height="29"
-                        Command="{Binding cmdEditFrequentie}"
-                        Style="{StaticResource OpenUCButton}" />
-                </StackPanel>
                 <Label
                     Grid.Row="7"
                     Grid.Column="3"
@@ -291,7 +251,7 @@
                 <StackPanel
                     Grid.Row="7"
                     Grid.Column="4"
-                    HorizontalAlignment="Left"
+                    HorizontalAlignment="Center"
                     Orientation="Horizontal">
 
                     <ComboBox
@@ -303,10 +263,10 @@
                         ItemsSource="{Binding MijnCollectie}"
                         SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.BegunstigdeID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                         SelectedValuePath="BegunstigdeID" />
-
                     <Button
                         Width="30"
                         Height="29"
+                        Margin="5"
                         Command="{Binding cmdEditBegunstigden}"
                         Style="{StaticResource OpenUCButton}" />
                 </StackPanel>
@@ -321,7 +281,7 @@
                 <StackPanel
                     Grid.Row="8"
                     Grid.Column="4"
-                    HorizontalAlignment="Left"
+                    HorizontalAlignment="Center"
                     Orientation="Horizontal">
 
                     <ComboBox
@@ -337,12 +297,108 @@
                     <Button
                         Width="30"
                         Height="29"
+                        Margin="5"
                         Command="{Binding cmdEditCategorie}"
                         Style="{StaticResource OpenUCButton}" />
                 </StackPanel>
 
+                <Label
+                    Grid.Row="9"
+                    Grid.Column="3"
+                    HorizontalContentAlignment="Right"
+                    Content="Bijlage"
+                    Foreground="#024f87" />
+                <StackPanel
+                    Grid.Row="9"
+                    Grid.Column="4"
+                    Grid.ColumnSpan="2"
+                    Margin="5"
+                    HorizontalAlignment="Left"
+                    DataContext="{Binding Source={StaticResource VML}, Path=BijlageViewModel}"
+                    Orientation="Horizontal">
+                    <ListView
+                        x:Name="ListViewBijlage"
+                        Margin="0"
+                        Foreground="#024f87"
+                        ItemsSource="{Binding BijlageCollectie}"
+                        SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.BudgetTransactionID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        SelectedValuePath="BudgetBijlageID">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn
+                                    Width="160"
+                                    DisplayMemberBinding="{Binding BijlageNaam}"
+                                    Header="Bijlage Naam" />
+                            </GridView>
+                        </ListView.View>
+
+                    </ListView>
+                    <Button
+                        Width="30"
+                        Height="29"
+                        Margin="5"
+                        VerticalAlignment="Top"
+                        Command="{Binding cmdUploadBijlage}"
+                        Style="{StaticResource UploadPersoonButton}" />
+                    <Button
+                        Width="30"
+                        Height="29"
+                        Margin="5"
+                        VerticalAlignment="Top"
+                        Command="{Binding cmdShowBijlage}"
+                        CommandParameter="{Binding ElementName=ListViewBijlagen, Path=SelectedItem}"
+                        Style="{StaticResource Showfile}" />
+                    <Button
+                        Width="30"
+                        Height="29"
+                        Margin="5"
+                        VerticalAlignment="Top"
+                        Command="{Binding cmdDeleteBijlage}"
+                        CommandParameter="{Binding ElementName=ListViewBijlagen, Path=SelectedItem}"
+                        Style="{StaticResource Deletefile}" />
+
+
+                </StackPanel>
+
+                <Label
+                    Grid.Row="10"
+                    Grid.Column="4"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Content="Drop here" />
+
+                <Rectangle
+                        Grid.Row="10"
+                        Grid.Column="4"
+                        x:Name="DropPlace"
+                        Width="200"
+                        Height="100"
+                        Fill="#bbeeeeee"
+                        RadiusX="8"
+                        RadiusY="8"
+                        Stroke="Gray"
+                        StrokeDashArray="2.0 1.0"
+                        StrokeThickness="4">
+                        <i:Interaction.Behaviors>
+                            <Behaviors:clsDragDropBehavior
+                                DropCommand="{Binding cmdDropBijlage}" />
+                        </i:Interaction.Behaviors>
+                    </Rectangle>
+
+                    
+                    <!--  Lijst met gedropte items  -->
+                    <ListBox
+                        Grid.Row="10"
+                        Grid.Column="5"
+                        Grid.ColumnSpan="2"
+                        x:Name="lstFiles"
+                        Width="150"
+                        Margin="5"
+                        ItemsSource="{Binding Bijlage}" />
+                
             </Grid>
         </Border>
 
     </Grid>
 </UserControl>
+
