--- a/HomeManager/View/Budget/ucTransactie.xaml
+++ b/HomeManager/View/Budget/ucTransactie.xaml
@@ -308,53 +308,29 @@
                     HorizontalContentAlignment="Right"
                     Content="Bijlage"
                     Foreground="#024f87" />
-                <StackPanel
+                <ListBox
+          x:Name="ListViewBijlage"
+          Margin="0"
                     Grid.Row="9"
                     Grid.Column="4"
-                    Grid.ColumnSpan="2"
-                    Margin="5"
-                    HorizontalAlignment="Left"
-                    DataContext="{Binding Source={StaticResource VML}, Path=BijlageViewModel}"
-                    Orientation="Horizontal">
-                    <ListView
-                        x:Name="ListViewBijlage"
-                        Margin="0"
-                        Foreground="#024f87"
-                        ItemsSource="{Binding BijlageCollectie}"
-                        SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.BudgetTransactionID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                        SelectedValuePath="BudgetBijlageID">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn
-                                    Width="160"
-                                    DisplayMemberBinding="{Binding BijlageNaam}"
-                                    Header="Bijlage Naam" />
-                            </GridView>
-                        </ListView.View>
-
-                    </ListView>
-                    <Button
-                        Width="30"
-                        Height="29"
-                        Margin="5"
-                        VerticalAlignment="Top"
+          Foreground="#024f87"
+          ItemsSource="{Binding MijnCollectieBijlage}"
+          SelectedItem="{Binding MijnSelectedBijlage, UpdateSourceTrigger=PropertyChanged}"                        
+          SelectedValuePath="BudgetBijlageID"/>
+                <StackPanel
+                    Grid.Row="9"
+                    Grid.Column="5"             
+                    HorizontalAlignment="Left"              
+                    Orientation="Vertical">
+              
+                    <Button                    
                         Command="{Binding cmdUploadBijlage}"
                         Style="{StaticResource UploadPersoonButton}" />
-                    <Button
-                        Width="30"
-                        Height="29"
-                        Margin="5"
-                        VerticalAlignment="Top"
-                        Command="{Binding cmdShowBijlage}"
-                        CommandParameter="{Binding ElementName=ListViewBijlagen, Path=SelectedItem}"
+                    <Button  
+                        Command="{Binding cmdShowBijlage}"                        
                         Style="{StaticResource Showfile}" />
-                    <Button
-                        Width="30"
-                        Height="29"
-                        Margin="5"
-                        VerticalAlignment="Top"
-                        Command="{Binding cmdDeleteBijlage}"
-                        CommandParameter="{Binding ElementName=ListViewBijlagen, Path=SelectedItem}"
+                    <Button                
+                        Command="{Binding cmdDeleteBijlage}"                     
                         Style="{StaticResource Deletefile}" />
 
 
@@ -386,15 +362,7 @@
                     </Rectangle>
 
                     
-                    <!--  Lijst met gedropte items  -->
-                    <ListBox
-                        Grid.Row="10"
-                        Grid.Column="5"
-                        Grid.ColumnSpan="2"
-                        x:Name="lstFiles"
-                        Width="150"
-                        Margin="5"
-                        ItemsSource="{Binding Bijlage}" />
+           
                 
             </Grid>
         </Border>
